<resources>
    <string name="app_name">YoloTest</string>
    <string name="latest_movie">Latest movies</string>
    <string name="toolbarimage">toolbarImage</string>
    <string name="popular_movies">Popular movies</string>
    <string name="top_rated_movies">Top Rated movies</string>
    <string name="upcoming_movies">Upcoming movies</string>
    <string name="trending_movie">Trending movies</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="play_trailer">Play Trailer</string>
    <string name="something_went_wrong">Something went wrong</string>
    <string name="no_internet">No Connection Available</string>
    <string name="error_loading_image">Error while loading image</string>
</resources>