<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appbar"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:fitsSystemWindows="true"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

            <com.google.android.material.appbar.CollapsingToolbarLayout
                android:id="@+id/collapsing_toolbar"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fitsSystemWindows="true"
                app:contentScrim="?attr/colorPrimary"
                app:expandedTitleMarginEnd="64dp"
                app:expandedTitleMarginStart="48dp"
                app:layout_scrollFlags="scroll|exitUntilCollapsed">

                <ImageView
                    android:id="@+id/expandedImage"
                    android:layout_width="match_parent"
                    android:layout_height="250dp"
                    android:contentDescription="@string/toolbarimage"
                    android:scaleType="centerCrop"
                    android:src="@drawable/joker"
                    app:layout_collapseMode="parallax"
                    app:layout_collapseParallaxMultiplier="0.7" />

                <androidx.appcompat.widget.Toolbar
                    android:id="@+id/toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    app:layout_collapseMode="pin"
                    app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

            </com.google.android.material.appbar.CollapsingToolbarLayout>

        </com.google.android.material.appbar.AppBarLayout>

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="@string/appbar_scrolling_view_behavior"
            tools:context=".HomeFragment.HomeFragment">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">


                <include
                    android:id="@+id/include"
                    layout="@layout/appbar_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:visibility="gone"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />


                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/LatestMovieCon"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:background="@drawable/round_bg"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/trendingMovieText">

                    <TextView
                        android:id="@+id/latestMovieText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingStart="10dp"
                        android:paddingTop="10dp"
                        android:paddingEnd="15dp"
                        android:paddingBottom="10dp"
                        android:text="@string/latest_movie"
                        android:textColor="@color/text_item_color"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        app:drawableEndCompat="@drawable/ic_baseline_keyboard_arrow_down_24"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <net.cachapa.expandablelayout.ExpandableLayout
                        android:id="@+id/expandable_latest_movies"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:minHeight="30dp"
                        app:el_duration="1000"
                        app:el_expanded="true"
                        app:el_parallax="0.5"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/latestMovieText">

                        <androidx.recyclerview.widget.RecyclerView
                            android:id="@+id/latestMovieRecycleView"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="horizontal"
                            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/trendingMovieText" />
                    </net.cachapa.expandablelayout.ExpandableLayout>
                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/PopularCon"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:background="@drawable/round_bg"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/trendingMovieText">

                    <TextView
                        android:id="@+id/popularText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingStart="10dp"
                        android:paddingTop="10dp"
                        android:paddingEnd="15dp"
                        android:paddingBottom="10dp"
                        android:text="@string/popular_movies"
                        android:textColor="@color/text_item_color"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        app:drawableEndCompat="@drawable/ic_baseline_keyboard_arrow_down_24"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <net.cachapa.expandablelayout.ExpandableLayout
                        android:id="@+id/expandable_popular_movies"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:minHeight="30dp"
                        app:el_duration="1000"
                        app:el_expanded="true"
                        app:el_parallax="0.5"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/popularText">

                        <androidx.recyclerview.widget.RecyclerView
                            android:id="@+id/popularRecycleView"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="horizontal"
                            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/trendingMovieText" />
                    </net.cachapa.expandablelayout.ExpandableLayout>
                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/topRatedCon"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:background="@drawable/round_bg"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/trendingMovieText">

                    <TextView
                        android:id="@+id/topRatedText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingStart="10dp"
                        android:paddingTop="10dp"
                        android:paddingEnd="15dp"
                        android:paddingBottom="10dp"
                        android:text="@string/top_rated_movies"
                        android:textColor="@color/text_item_color"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        app:drawableEndCompat="@drawable/ic_baseline_keyboard_arrow_down_24"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <net.cachapa.expandablelayout.ExpandableLayout
                        android:id="@+id/expandable_top_rated_movies"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:minHeight="30dp"
                        app:el_duration="1000"
                        app:el_expanded="false"
                        app:el_parallax="0.5"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/topRatedText">

                        <androidx.recyclerview.widget.RecyclerView
                            android:id="@+id/topRatedRecycleView"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="horizontal"
                            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/trendingMovieText" />

                        <com.airbnb.lottie.LottieAnimationView
                            android:id="@+id/loadingTopRatedMovies"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:visibility="gone"
                            app:lottie_autoPlay="true"
                            app:lottie_loop="true"
                            app:lottie_rawRes="@raw/cinema_loading" />
                    </net.cachapa.expandablelayout.ExpandableLayout>
                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/upComingCon"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:background="@drawable/round_bg"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/trendingMovieText">

                    <TextView
                        android:id="@+id/upComingText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingStart="10dp"
                        android:paddingTop="10dp"
                        android:paddingEnd="15dp"
                        android:paddingBottom="10dp"
                        android:text="@string/upcoming_movies"
                        android:textColor="@color/text_item_color"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        app:drawableEndCompat="@drawable/ic_baseline_keyboard_arrow_down_24"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <net.cachapa.expandablelayout.ExpandableLayout
                        android:id="@+id/expandable_upcoming_movies"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:minHeight="30dp"
                        app:el_duration="1000"
                        app:el_expanded="false"
                        app:el_parallax="0.5"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/upComingText">

                        <androidx.recyclerview.widget.RecyclerView
                            android:id="@+id/upComingRecycleView"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="horizontal"
                            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/trendingMovieText" />

                        <com.airbnb.lottie.LottieAnimationView
                            android:id="@+id/loadingUpComingMovies"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:visibility="gone"
                            app:lottie_autoPlay="true"
                            app:lottie_loop="true"
                            app:lottie_rawRes="@raw/cinema_loading" />
                    </net.cachapa.expandablelayout.ExpandableLayout>
                </androidx.constraintlayout.widget.ConstraintLayout>


                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/TrendingMovieCon"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_marginEnd="5dp"
                    android:background="@drawable/round_bg"
                    android:visibility="gone"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/trendingMovieText">

                    <TextView
                        android:id="@+id/trendingMovieText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingStart="10dp"
                        android:paddingTop="5dp"
                        android:paddingEnd="15dp"
                        android:paddingBottom="5dp"
                        android:text="@string/trending_movie"
                        android:textColor="@color/text_item_color"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        app:drawableEndCompat="@drawable/ic_baseline_keyboard_arrow_down_24"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <net.cachapa.expandablelayout.ExpandableLayout
                        android:id="@+id/expandable_layout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:minHeight="30dp"
                        app:el_duration="1000"
                        app:el_expanded="true"
                        app:el_parallax="0.5"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/trendingMovieText">

                        <androidx.recyclerview.widget.RecyclerView
                            android:id="@+id/trendingMovieRecycleView"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="horizontal"
                            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/trendingMovieText" />
                    </net.cachapa.expandablelayout.ExpandableLayout>
                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.appcompat.widget.LinearLayoutCompat>

        </androidx.core.widget.NestedScrollView>
    </androidx.coordinatorlayout.widget.CoordinatorLayout>

</layout>